<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">
    <CheckBox
        android:id="@+id/mon"
        android:text="@string/day_mon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/CircleCheckBox"/>
    <CheckBox
        android:id="@+id/the"
        android:text="@string/day_the"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/CircleCheckBox"/>
    <CheckBox
        android:id="@+id/wes"
        android:text="@string/day_wes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/CircleCheckBox"/>
    <CheckBox
        android:id="@+id/thr"
        android:text="@string/day_thr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/CircleCheckBox"/>
    <CheckBox
        android:id="@+id/fri"
        android:text="@string/day_fri"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/CircleCheckBox"/>
    <CheckBox
        android:id="@+id/sat"
        android:text="@string/day_sat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/CircleCheckBox"/>
    <CheckBox
        android:id="@+id/sun"
        android:text="@string/day_sun"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/CircleCheckBox"/>
</LinearLayout>