<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/fragment_padding_plain">


    <!-- location name -->
    <TextView
        style="@style/MenuText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:text="@string/map_location_name_guide" />

    <EditText
        android:id="@+id/starting_name"
        style="@style/GuideText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginStart="@dimen/content_space_small"
        android:layout_marginLeft="@dimen/content_space_small"
        android:layout_marginBottom="@dimen/content_space_small"
        android:hint="@string/map_location_name_hint"
        android:inputType="text"
        android:maxEms="10"
        android:minEms="1" />


    <!-- location address -->
    <TextView
        style="@style/MenuText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:text="@string/map_location_address" />

    <include
        android:id="@+id/starting_setting"
        layout="@layout/item_list_change_delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/content_space_small"/>


    <Button
        android:id="@+id/store_starting"
        style="@style/StoreButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/store"
        android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>