<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/habit_add_activity"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_add_habit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/toolbars"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_habit"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"
            android:textSize="30sp"
            android:layout_gravity="center"
            />
    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/toolbar_add_habit">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/toolbar_add_habit"
            android:padding="30dp"
            >


            <!-- habit name -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/guide_habit_name_intro"
                style="@style/GuideText"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="@dimen/content_space_small">

                <EditText
                    android:id="@+id/add_habit_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/guide_habit_name_hint"
                    android:textColorHint="@color/colorPrimary"
                    android:textSize="15sp"
                    android:selectAllOnFocus="true" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/guide_habit_name_end"
                    style="@style/GuideText"/>
            </LinearLayout>


            <!-- habit due -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/guide_habit_due"
                style="@style/GuideText"/>

            <include
                android:id="@+id/due"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/content_space_small"
                layout="@layout/item_list_change_delete"/>

            <!-- habit quantity -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/guide_habit_quantity"
                    android:layout_weight="1"
                    style="@style/GuideText"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/guide_habit_quantity_prompt"
                    android:layout_weight="1"
                    style="@style/PromptText"/>
                <CheckBox
                    android:id="@+id/check_for_quantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <include
                android:id="@+id/quantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/content_space_small"
                android:visibility="gone"
                layout="@layout/item_list_change_delete"/>

            <!-- prepare things -->
            <include
                android:id="@+id/prepare"
                layout="@layout/item_selective"/>

            <View android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginBottom="@dimen/content_space_small"/>

            <!-- day and place input -->

            <include
                android:id="@+id/add_habit_intro"
                layout="@layout/item_list_change_delete"/>

            <View android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginBottom="@dimen/activity_horizontal_margin"/>

            <include
                android:id="@+id/add_habit_day"
                layout="@layout/item_seven_day_boxes"/>

            <View android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginBottom="@dimen/content_space_small"/>

            <Button
                android:id="@+id/store_habit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/StoreButton"
                android:text="@string/store"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:layout_marginBottom="100dp"/>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>