<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/content_space_small">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/guide_due_f"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/MenuText"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/input"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="10"
                    android:imeOptions="actionDone"
                    android:inputType="numberDecimal" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:text="@string/guide_due_tw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/MenuText"/>
        </LinearLayout>


        <TextView
            android:text="@string/guide_due_th"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/MenuText"/>
    </LinearLayout>

</FrameLayout>