<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/fragment_padding_plain">


            <!-- location name -->
            <TextView
                style="@style/MenuText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:text="@string/map_location_name_guide" />

            <EditText
                android:id="@+id/destination_name"
                style="@style/GuideText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginStart="@dimen/content_space_small"
                android:layout_marginLeft="@dimen/content_space_small"
                android:layout_marginBottom="@dimen/content_space_small"
                android:hint="@string/map_location_name_hint"
                android:inputType="text"
                android:maxEms="10"
                android:minEms="1" />


            <!-- location address -->
            <TextView
                style="@style/MenuText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:text="@string/map_location_address" />

            <include
                android:id="@+id/destination_setting"
                layout="@layout/item_list_change_delete" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginBottom="@dimen/content_space_small" />

            <!-- duration -->
            <TextView
                style="@style/MenuText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:text="@string/map_location_time_take" />

            <include
                android:id="@+id/destination_time_duration"
                layout="@layout/item_list_change_delete" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginBottom="@dimen/content_space_small" />


            <!-- starting time -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/MenuText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:text="@string/map_location_go_time" />

                <include
                    android:id="@+id/destination_time_start"
                    layout="@layout/item_list_change_delete" />

            </LinearLayout>

            <include
                android:id="@+id/day_input"
                layout="@layout/item_seven_day_boxes" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginBottom="@dimen/content_space_small" />

            <Button
                android:id="@+id/store_destination"
                style="@style/StoreButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/store"
                android:textStyle="bold" />

        </LinearLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>